@@ -44,6 +44,7 @@ version <next>:
 - MPEG-4 Audio Lossless Coding (ALS) decoder
 - -formats option split into -formats, -codecs, -bsfs, and -protocols
 - IV8 demuxer
+- CDG demuxer and decoder
 
 
 
